crazy background, added jquery

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
       #canvas {
         position : absolute;
         left : 0;
-        top : 0;
+        top : calc(50% + 120px);;
       }
     </style>
   </head>
   <body>
+    <script src="./bower_components/jquery/jquery.js"></script>
     <script src="./bower_components/clmtrackr/js/utils.js"></script>
     <script src="./bower_components/clmtrackr/js/clmtrackr.js"></script>
     <script src="./bower_components/clmtrackr/models/model_pca_20_svm.js"></script>
