--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         left : 0;
         top : calc(50% + 120px);;
       }
+      img{
+        float:left;
+      }
     </style>
   </head>
   <body>
