--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
     <script src="./bower_components/clmtrackr/js/utils.js"></script>
     <script src="./bower_components/clmtrackr/js/clmtrackr.js"></script>
     <script src="./bower_components/clmtrackr/models/model_pca_20_svm.js"></script>
-    <div id="content">
 
+    <script src="./bower_components/Seriously.js/seriously.js"></script>
+    <script src="./bower_components/Seriously.js/effects/seriously.hue-saturation.js"></script>
+
+    <div id="content">
       <div id="container">
         <canvas id="canvas" width="640" height="480"></canvas>
       </div>
-
-      <script src="./hypno.js"></script>
     </div>
+
+    <script src="./hypno.js"></script>
   </body>
 </html>
